--- a/helloservice/kubernetes.yml
+++ b/helloservice/kubernetes.yml
@@ -6,6 +6,11 @@ metadata:
     app: hello-service
 data:
   bootstrap.yml: |
+    management:
+      endpoints:
+        web:
+          exposure:
+            include: "*"
     spring:
       application:
         name: helloservice
@@ -20,7 +25,7 @@ data:
             preferIpAddress: true
             healthCheckInterval: 15s
             healthCheckPath: /hello-service/actuator/health
-            health-check-url: http://hello-service:8080/hello-service/actuator/health
+            health-check-url: http://${spring.cloud.client.ip-address}:8080/hello-service/actuator/health
     server:
       servlet:
         context-path: /hello-service
@@ -34,7 +39,7 @@ metadata:
   labels:
     app: hello-service
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: hello-service
