--- a/helloservice-client/kubernetes.yml
+++ b/helloservice-client/kubernetes.yml
@@ -38,6 +38,7 @@ metadata:
   labels:
     app: hello-service-client
 spec:
+  replicas: 3
   selector:
     matchLabels:
       app: hello-service-client
